* Campaign Out: add support for linking external URLs to a campaign.
* Dialer (ECCP): extend "getcampaigninfo" request to report external URLs
* External URL: new module for management of external URLs to be opened on each
  connected call.
* Agent Console: when reading ECCP password for agent, only active agents should
  be considered. Fixes Elastix bug #1157.
* Dialer (ECCP): protocol change: the agentloggedin and agentloggedout events
  no longer report agent membership to queues. The effort required to parse
  the output of "queue show" scales linearly with the number of agents in 
  queues, and also with the number of queues defined, resulting in noticeable
  lags in ECCP performance. A new request "getagentqueues" has been added in
  case a client really needs this information.
* Dialer: (almost) complete rewrite of the central code.
  During a deployment with a moderately large number of agents, several design
  flaws were uncovered in the dialer code. The largest of such design flaws was
  the attempt to handle all of the operations of the dialer in a single process.
  Coupled with this, several event handlers required synchronous database 
  updates or reads, and in at least one handler, a database access with every
  single event, whether the event was from a handled call or not. In addition to
  this, the same event handler required a synchronous AMI request that required
  three seconds to parse completely. Furthermore, several instances were found
  where data was read from the database that could have been cached, since the
  dialer itself generated the data. All of this added up to large and 
  ever-increasing delays in event processing that degraded the responsiveness of
  the agent console (any implementation) by tens of seconds or more. To fix all
  of these problems, the dialer was rewritten to make use of multiple processes.
  One process handles AMI events, and does not read or write to the database.